--- a/tests/mocks/CMakeLists.txt
+++ b/tests/mocks/CMakeLists.txt
@@ -35,6 +35,7 @@ add_executable(mock_metermap mock_metermap.cpp ../../src/Meter.cpp ../../src/Opt
 	../../src/api/Volkszaehler.cpp
 	../../src/api/MySmartGrid.cpp
 	../../src/api/InfluxDB.cpp
+	../../src/api/LinKNX.cpp
 	../../src/api/Null.cpp
 	../../src/api/CurlIF.cpp
 	../../src/api/CurlCallback.cpp
